syntax= "proto3";

package org.hps;

option java_multiple_files=true;

option java_package="org.hps";

import "google/protobuf/empty.proto";




message RateRequest {
  string rate =1;
}

message RateResponse {
  float rate =1;
}


service RateService{
  rpc consumptionRate (RateRequest) returns (RateResponse) {};
}
